cmake_minimum_required(VERSION 3.0)

project(breakpad)

option(ADD_EXCEPTION_HANDLER "Add exception_handler" ON)
option(ADD_DUMP_SYMS "Add dump_syms" OFF)
option(ADD_MINIDUMP_STACKWALK "Add minidump_stackwalk" OFF)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
    set(CMAKE_CXX_FLAGS "/MP /W3 /wd4091 /wd4530 /wd4577")
    set(CMAKE_CXX_FLAGS_DEBUG "/Od /Ob0 /RTC1 /Zi /MTd /D_DEBUG")
    set(CMAKE_CXX_FLAGS_RELEASE "/O2 /Ob2 /Oi /Gy /GL /MT /DNDEBUG")
    set(CMAKE_STATIC_LINKER_FLAGS_RELEASE "/LTCG")
    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/LTCG")
    add_definitions(-DWIN32 -D_WINDOWS -DUNICODE -D_UNICODE -DWIN32_LEAN_AND_MEAN)
elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
    set(CMAKE_CXX_FLAGS "-pipe -W")
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -D_DEBUG")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
    set(CMAKE_SKIP_RPATH ON)
endif()

set(CMAKE_C_FLAGS ${CMAKE_CXX_FLAGS})
set(CMAKE_C_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
set(CMAKE_C_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})

if(HAVE_CONFIG_H)
    add_definitions(-DHAVE_CONFIG_H)
endif()

set(ROOT_DIR ${CMAKE_SOURCE_DIR}/..)
set(COMMON_DIR ${CMAKE_SOURCE_DIR}/common)
set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/third_party)
set(BIN_DIR ${ROOT_DIR}/bin/${CMAKE_BUILD_TYPE})
set(LIB_DIR ${ROOT_DIR}/lib/${CMAKE_BUILD_TYPE})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LIB_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BIN_DIR})

if(ADD_EXCEPTION_HANDLER)
    add_subdirectory(client)
endif()

if(ADD_DUMP_SYMS)
    add_subdirectory(tools)
endif()

if(ADD_MINIDUMP_STACKWALK)
    add_subdirectory(processor)
endif()
